Adding of Categories, and saving

--- a/SpendingTracker/src/spendingtracker/MainMenu.form
+++ b/SpendingTracker/src/spendingtracker/MainMenu.form
@@ -196,6 +196,9 @@
                       <Dimension value="[0, 0]"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ConfigureActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="Help">
                   <Properties>
