--- a/SpendingTracker/src/spendingtracker/Data.form
+++ b/SpendingTracker/src/spendingtracker/Data.form
@@ -105,10 +105,11 @@
         <Component class="javax.swing.JTable" name="spendingTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="0">
+              <Table columnCount="4" rowCount="0">
                 <Column editable="false" title="Date" type="java.lang.String"/>
                 <Column editable="false" title="Amount" type="java.lang.String"/>
                 <Column editable="false" title="Category" type="java.lang.String"/>
+                <Column editable="false" title="Balance" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="selectionMode" type="int" value="0"/>
