--- a/SpendingTracker/src/spendingtracker/MainMenu.form
+++ b/SpendingTracker/src/spendingtracker/MainMenu.form
@@ -368,6 +368,9 @@
                       <Dimension value="[0, 0]"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="GoalsActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="Data">
                   <Properties>
