--- a/SpendingTracker/src/spendingtracker/MainMenu.form
+++ b/SpendingTracker/src/spendingtracker/MainMenu.form
@@ -252,6 +252,9 @@
                       <Dimension value="[0, 0]"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="HelpActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="Exit">
                   <Properties>
