--- a/SpendingTracker/src/spendingtracker/Goals.form
+++ b/SpendingTracker/src/spendingtracker/Goals.form
@@ -47,19 +47,19 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="addGoal" min="-2" max="-2" attributes="0"/>
+                      <Component id="addGoal1" min="-2" pref="180" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="removeGoal" min="-2" max="-2" attributes="0"/>
+                      <Component id="addGoal" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane3" alignment="0" pref="872" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -71,8 +71,8 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="removeGoal" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="addGoal" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="addGoal1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -101,29 +101,39 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="7" rowCount="1">
-                <Column editable="false" title="Date Set" type="java.lang.String"/>
-                <Column editable="false" title="Goal Title" type="java.lang.String"/>
-                <Column editable="false" title="Amount Required" type="java.lang.String"/>
-                <Column editable="false" title="Amount Saved" type="java.lang.String"/>
-                <Column editable="false" title="Weekly Saving Needed" type="java.lang.String"/>
-                <Column editable="false" title="Date End" type="java.lang.String"/>
-                <Column editable="false" title="On Target" type="java.lang.Boolean"/>
+              <Table columnCount="3" rowCount="1">
+                <Column editable="false" title="Goal Description" type="java.lang.String"/>
+                <Column editable="false" title="Goal End Date" type="java.lang.String"/>
+                <Column editable="false" title="Goal Met" type="java.lang.Boolean"/>
               </Table>
             </Property>
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+              <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="750" minWidth="-1" prefWidth="150" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="500" minWidth="-1" prefWidth="100" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+              </TableColumnModel>
+            </Property>
             <Property name="selectionMode" type="int" value="0"/>
+            <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+              <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="removeGoal">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Remove Selected Goal"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeGoalActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="addGoal">
       <Properties>
         <Property name="text" type="java.lang.String" value="Add Goal"/>
@@ -131,6 +141,15 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addGoalActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="addGoal1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Set Selected Goal Met"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addGoal1ActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
